# Huffman

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: encode.cc  encoder.cc  heap.cc  heap.h  huffman.cc  huffman.h  interface.cc  interface.h  main.cc  minqueue.cc  minqueue.h  minqueuenode.cc
